<resources>
    <string name="app_name">Rajat\'s Android App Project</string>
    <string name="author_name">Rajat Malhotra</string>
    <string name="about">About</string>
    <string name="gen_error">Generate Error</string>
    <string name="dictionary">Dictionary</string>
    <string name="quit">Quit</string>
    <string name="email">malhotra.r@husky.neu.edu</string>
    <string name="year">2nd year MS</string>
    <string name="degree">Computer Science</string>
    <string name="univ">Northeastern University</string>
    <string name="sudoku">Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="settings_label">Settings&#8230;</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>
    <string name="title_activity_dictionary">Test Dictionary</string>
    <string name="clear">Clear</string>
    <string name="word_hint">Enter a word: </string>
    <string name="return_to_menu">Return to menu</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="link1_info">Idea about a data structure for dictionary implementation from: </string>
    <string name="link1">http://stackoverflow.com/questions/10017808/best-data-structure-for-dictionary-implementation</string>
    <string name="link2_info">Impementation of EditText listener from: </string>
    <string name="link2">http://stackoverflow.com/questions/7432083/how-to-use-edittext-ontextchanged-event-when-i-press-the-number</string>
    <string name="link3_info">Ideas about Dictionary implementation on a phone from: </string>
    <string name="link3">http://stackoverflow.com/questions/6083761/how-to-treat-file-contents-as-string/6083888#6083888</string>
    <string name="link4_info">Opening a text file from the assets folder on Android from: </string>
    <string name="link4">http://stackoverflow.com/questions/5771366/reading-a-simple-text-file</string>
    <string name="link5_info">Beep sound downloaded from: </string>
    <string name="link5">http://www.soundjay.com/censor-beep-sound-effect.html</string>
    <string name="title_activity_word_game">Word Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="title_activity_acknowledgements">Acknowledgements</string>
    <string name="instructions">Instructions</string>
    <string name="word_game_settings">Word Game Settings</string>
    <string name="instructions_text">This is a word-search game. You have 45 seconds to find as many words as possible in the word matrix. 
        The letters can be selected contiguously in any direction except diagonally. 
        When you select a word, the letters at those places are replaced by new letters. Each letter in a valid word has the value of 10 points.
        You can also press the \'Hint\' button to enable the hint mode. 
        With hint mode enabled, the letters would turn green if you have found a word even if you have not lifted your finger. 
        They would not if the hint mode is disabled. Good luck. </string>
    <string name="link6_info">Background music and word-search sound from: </string>
    <string name="link6">http://www.soundjay.com/button-sounds-1.html</string>
    <string name="link7_info">Algorithm to solve a boggle game algorithm from: </string>
    <string name="link7">http://www.geekviewpoint.com/java/boggle/solver</string>
    <string name="link8_info">Countdown Timer example from: </string>
    <string name="link8">http://w2davids.wordpress.com/simple-countdowntimer-example</string>
    <string name="link9_info">Idea about 2D graphics in Android from: </string>
    <string name="link9">http://www3.ntu.edu.sg/home/ehchua/programming/android/Android_2D.html</string>
    <string name="link10_info">Example for serialization in Android from: </string>
    <string name="link10">http://www.coderzheaven.com/2012/07/25/serialization-android-simple-example/</string>
    <string name="link11_info">Android storage concepts from: </string>
    <string name="link11">http://developer.android.com/guide/topics/data/data-storage.html#filesInternal</string>
    <string name="link12_info">Transparency effect in word-matrix from: </string>
    <string name="link12">http://stackoverflow.com/questions/11712254/paint-setalpha-sums-up-if-called-several-times</string>
    <string name="title_activity_communication">Communication</string>
    <string name="synchronous">Synchronous Game</string>
    <string name="asynchronous">Asynchronous Game</string>
    <string name="enterUsername">"Username: "</string>
    <string name="login">Login</string>
    <string name="playOnline">Play Online</string>
    <string name="title_activity_onlineplayers">Players Online</string>
    <string name="logout">Log Out</string>
    <string name="invite">Invite Someone to Play</string>
    <string name="title_activity_asynchronous_main">Communication</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="send_label">Send</string>
    <string name="clear_label">Clear</string>
    <string name="link50_info">Implementing GCM Client from: </string>
    <string name="link50">http://developer.android.com/google/gcm/client.html</string>
    <string name="link51_info">R file gone missing bug solved from: </string>
    <string name="link51">http://stackoverflow.com/questions/4842611/r-file-is-missing-android</string>
    <string name="link52_info">Synchronous or Asynchronous Gameplay definitions from: </string>
    <string name="link52">http://www.whatgamesare.com/2011/08/synchronous-or-asynchronous-definitions.html</string>
    <string name="enter_message">Enter message here: </string>
    <string name="link53_info">AsyncTask tutorial from: </string>
    <string name="link53">http://www.vogella.com/tutorials/AndroidBackgroundProcessing/article.html</string>
    <string name="instructions_text_sync">Please enter the name of the player 
        you wish to play with after clicking the \"Invite Someone to play\" button. If the user is online, 
        he will receive a dialog box with the option to accept or decline your request. 
        [This is a just test code, multiplayer gameplay is not available yet!]</string>
    <string name="two_player_dabble">Two Player Word Game</string>
    <string name="title_activity_two_player_word_game">Two Player Word Game</string>
    <string name="rt">Real-time Game</string>
    <string name="rt1">Start Game</string>
    <string name="tb">Turn-based Game</string>
    <string name="title_activity_real_time_play">Real-Time Word Game</string>
    <string name="title_activity_turn_based_play_main">Turn-Based Word Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_turn_based_play_main_screen">Turn-Based Word Game</string>
    <string name="new_user_login">New User Login</string>
    <string name="logout_prev">Logout Previous User</string>
    <string name="title_activity_word_game_turn_based">Turn-Based Word Game</string>
    <string name="instructions_sync">Please enter the name of the player 
        you wish to play with after clicking the \"Invite Someone to play\" button. If the user is online, 
        he will receive a dialog box with the option to accept or decline your request. 
        After the game starts, you have 45 seconds to make as many words as possible and beat your opponent.</string>
    <string name="instructions_tb">This is a turn-based game. When you invite a player, he will receive a notification (if he is logged in)
	    clicking on which he can start the game. After the game starts, you have 6 moves to 
	    get as high a score as possible. The game has to be completed in one go. 
	    That means if both the players exit the game, then the game gets lost. The player who sent the invite is only able to enter into the game 
	    when the other player plays the first move. The player with the higher score after 6 moves to win the game.</string>
    <string name="title_activity_sensor_detect">Shake Me</string>
    <string name="shake">Shaking Fun</string>
    <string name="text_shake">Shake the phone for a surprise. You will be taken to either the
        Real-Time word game or the Turn-Based word game. Have fun playing!</string>
     <string name="leaderboardTP">Leaderboard for Two Player Word Game</string>
     <string name="leaderboardTP1">Leaderboard</string>
    <string name="pleaselogout">Please click on the \"Logout Previous User\" Button before logging in
</string>
    <string name="trickiest_part">Trickiest Part</string>
    <string name="title_activity_trickiest_part">Trickiest Part</string>
    <string name="btSpeak">Speak</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recognition">Voice Recognition</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>
    <string-array name="saNoOfMatches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_manual_input">Exercise Details</string>
    <string name="title_activity_workout_today">Add Workout</string>
    <string name="btnBeginWorkout">Begin Workout</string>
    <string name="loadingText">Loading...</string>
    <string name="addManuallyText">Add Manually</string>
    <string name="speech_activation_default_label">Speak</string>
    <string name="speech_activation_button">Button</string>
    <string name="speech_activation_movement">Movement</string>
    <string name="speech_activation_nfc">NFC Scan</string>
    <string name="speech_activation_camera">Camera</string>
    <string name="speech_activation_clap">Clap</string>
    <string name="speech_activation_speak">Speak Hello</string>
    <string name="speech_activation_notification_listening">Listening for </string>
    <string name="speech_activation_notification_title">Speech Activation</string>
    <string name="btn_speech_stop_service">Stop</string>
    <string name="final_project">Final Project</string>
    <string name="back_to_main_screen_text">Go Back To Begin Workout</string>
    <string name="about_the_app_text">About Lets Talk Workouts!</string>
    <string name="how_to_use_text">How To Use Lets Talk Workouts!</string>
    <string name="stop_listening_text">Stop Speaking</string>
    <string name="loading_tutorials_text">Loading Tutorials</string>
</resources>