
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true" 
      android:background="@color/background_main">
   
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="left"
       android:orientation="vertical"
       android:paddingLeft="13dp" 
       android:paddingTop="13dp" 
       android:paddingRight="13dp" 
       android:paddingBottom="13dp"> 

    
       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link1_info"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <TextView
           android:id="@+id/textView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:text="@string/link1"
           android:textColor="@color/black"
           android:autoLink="web" 
           android:paddingBottom="15dp"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/textView9"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link2_info"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <TextView
           android:id="@+id/textView10"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link2"
           android:autoLink="web"
           android:paddingBottom="15dp"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/textView13"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link3_info"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <TextView
           android:id="@+id/textView14"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link3"
           android:autoLink="web"
           android:paddingBottom="15dp"
           android:textAppearance="?android:attr/textAppearanceSmall" />
       
        <TextView
           android:id="@+id/textView15"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link4_info"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <TextView
           android:id="@+id/textView16"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link4"
           android:autoLink="web"
           android:paddingBottom="15dp"
           android:textAppearance="?android:attr/textAppearanceSmall" />
       
       <TextView
           android:id="@+id/textView17"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link5_info"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <TextView
           android:id="@+id/textView18"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:textColor="@color/black"
           android:text="@string/link5"
           android:autoLink="web"
           android:paddingBottom="15dp"
           android:textAppearance="?android:attr/textAppearanceSmall" />
   </LinearLayout>

</ScrollView>
   
