<?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fillViewport="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_main"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip" >

   

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp"
        android:contentDescription="@string/author_name"
        android:src="@drawable/headshot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/author_name"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/degree"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/univ"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" />
    
    
    
<!-- 
    <TextView
        android:id="@+id/imei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size" /> -->
    
    </LinearLayout>
  </ScrollView>

