<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center_vertical"
    tools:context=".LtwTutorialsActivity" >
    
    <TextView
        android:id="@+id/tvLoadingTutorials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"        
        android:gravity="center"
        android:text="@string/loading_tutorials_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ProgressBar
        android:id="@+id/pbTutorialInit"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvLoadingTutorials" />

    <Button
        android:id="@+id/btnAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_the_app_text"
        android:visibility="invisible"
        android:layout_below="@+id/pbTutorialInit"
        android:layout_marginTop="20dp"
        android:onClick="handleAboutAppClick" />

    <Button
        android:id="@+id/btnHowToUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAboutApp"
        android:layout_marginTop="20dp"
        android:text="@string/how_to_use_text"
        android:visibility="invisible"
        android:onClick="handleHowToUseClick" />
    
    <Button
        android:id="@+id/btnStopListening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHowToUse"
        android:layout_marginTop="20dp"
        android:text="@string/stop_listening_text"
        android:visibility="invisible"
        android:onClick="handleStopListeningClick" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStopListening"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:onClick="handleBackClick"
        android:text="@string/back_to_main_screen_text" />

</RelativeLayout>
