<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/word_entry"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/word_entry"
        android:layout_toRightOf="@+id/word_entry"
        android:onClick="clearClick"
        android:text="@string/clear" />

    <EditText
        android:id="@+id/word_entry"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/word_hint" >
    </EditText>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonRtm"
        android:layout_below="@+id/buttonClear"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:scrollbarFadeDuration="0" >

        <TextView
            android:id="@+id/words_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </ScrollView>

    <Button
        android:id="@+id/buttonRtm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonAcknowledgements"
        android:onClick="returnToMenuClick"
        android:text="@string/return_to_menu" />

    <Button
        android:id="@+id/buttonAcknowledgements"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="acknowledgementsClick"
        android:text="@string/acknowledgements" />

</RelativeLayout>